# ComfyUI-FANTA-GameBox

./: README.md  README2.md  __init__.py  billiards_node.py  brick_breaker_node.py  flappy_bird_node.py  generate_sounds.html  pyproject.toml
.github/workflows/: publish.yml
ComfyUI-SnakeGameNode/: __init__.py  snake_game_node.py
js/: ai_opponent.js  billiards_widget.js  brick_breaker_widget.js  flappy_bird_widget.js  generate_sounds.js  snake_widget.js  sound_effects.js
