[project]
name = "snakegamenode"
description = "This is a top-tier Snake game node developed for ComfyUI. It lets you play a mini Snake game within the ComfyUI workflow, so you won’t get bored while waiting for image generation (or slacking off at work). Playing is not allowed by Han Cheng."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/IIs-fanta/ComfyUI-SnakeGameNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SnakeGameNode"
Icon = ""
